# fast-xinci

./: .gitignore  CMakeLists.txt  README.md  xinci
src/: args.cpp  args.h  dictionary.cpp  dictionary.h  extractor.cpp  extractor.h  indexer.cpp  indexer.h  main.cpp  model.cpp  model.h  selector.cpp  selector.h  utils.cpp  utils.h
